Multiple improvements in signature module. -Support for XAdES 1.3.2 (profiles B, T, C, X, XL, A). -New method validateDocument to validate and preserve signatures. -Upgrade signature algorithm to SHA256withRSA. -Support for EncapsulatedTimeStamps. -Fix certificate filtering in MatrixClient. -New CACertificateStore to manage certificate chains and CRLs. -Move PSIS and CertificateStore to matrix-common.